tests/baselines/reference/TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName.errors.txt
TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName.ts(1,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName.ts(15,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName.ts(15,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName.ts(15,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName.ts (5 errors) ====
    module A.B {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var x: number;
    }
    
    namespace A{ 
        namespace B {
            export var x: string;
        }
    }
    
    // ensure the right var decl is exported
    var x: number;
    var x = A.B.x;
    
    module X.Y.Z {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
               ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class Line {
            length: number;
        }
    }
    
    namespace X {
        export namespace Y {
            namespace Z {
                export class Line {
                    name: string;
                }
            }
        }
    }
    
    // make sure merging works as expected
    var l: { length: number };
    var l: X.Y.Z.Line;
    